website/i18n/zh-hant/docusaurus-plugin-content-docs/version-3.1.1/search.mdx
---
keywords:
  - algolia
  - search
---

# Search

There are a few options you can use to add search to your website:

- 🥇 [Algolia DocSearch](#using-algolia-docsearch) (**official**)
- 👥 [Typesense DocSearch](#using-typesense-docsearch)
- 👥 [Local Search](#using-local-search)
- 👥 [Your own `SearchBar` component](#using-your-own-search)

:::info

🥇 Docusaurus provides **first-class support** for [Algolia DocSearch](#using-algolia-docsearch).

👥 Other options are **maintained by the community**: please report bugs to their respective repositories.

:::

## 🥇 Using Algolia DocSearch {#using-algolia-docsearch}

Docusaurus has **official support** for [Algolia DocSearch](https://docsearch.algolia.com).

The service is **free** for any open-source project: just make sure to read the [checklist](https://docsearch.algolia.com/docs/who-can-apply/) and [apply to the DocSearch program](https://docsearch.algolia.com/apply).

DocSearch crawls your website once a week (the schedule is configurable from the web interface) and aggregates all the content in an Algolia index. This content is then queried directly from your front-end using the Algolia API.

If your website is [not eligible](https://docsearch.algolia.com/docs/who-can-apply) for the free, hosted version of DocSearch, or if your website sits behind a firewall and is not public, then you can [run your own](https://docsearch.algolia.com/docs/run-your-own/) DocSearch crawler.

:::note

By default, the Docusaurus preset generates a [sitemap.xml](https://docusaurus.io/sitemap.xml) that the Algolia crawler can use.

:::

:::info[From the old docsearch?]

You can read more about migration from the legacy DocSearch infra in [our blog post](/blog/2021/11/21/algolia-docsearch-migration) or [the DocSearch migration docs](https://docsearch.algolia.com/docs/migrating-from-legacy).

:::

### Index Configuration {#algolia-index-configuration}

After your application has been approved and deployed, you will receive an email with all the details for you to add DocSearch to your project. Editing and managing your crawls can be done via [the web interface](https://crawler.algolia.com/). Indices are readily available after deployment, so manual configuration usually isn't necessary.

:::tip

It is highly recommended to use a config similar to the [**Docusaurus v3 website config**](https://docsearch.algolia.com/docs/templates/#docusaurus-v2-template).

:::

### Connecting Algolia {#connecting-algolia}

Docusaurus' own `@docusaurus/preset-classic` supports Algolia DocSearch integration. If you use the classic preset, no additional installation is needed.

<details>
<summary>Installation steps when not using <code>@docusaurus/preset-classic</code></summary>

1. Install the package:

```bash npm2yarn
npm install --save @docusaurus/theme-search-algolia
```

2. Register the theme in `docusaurus.config.js`:

```js title="docusaurus.config.js"
export default {
  title: 'My site',
  // ...
  themes: ['@docusaurus/theme-search-algolia'],
  themeConfig: {
    // ...
  },
};
```

</details>

Then, add an `algolia` field in your `themeConfig`. **[Apply for DocSearch](https://docsearch.algolia.com/apply/)** to get your Algolia index and API key.

```js title="docusaurus.config.js"
export default {
  // ...
  themeConfig: {
    // ...
    // highlight-start
    algolia: {
      // The application ID provided by Algolia
      appId: 'YOUR_APP_ID',

      // Public API key: it is safe to commit it
      apiKey: 'YOUR_SEARCH_API_KEY',

      indexName: 'YOUR_INDEX_NAME',

      // Optional: see doc section below
      contextualSearch: true,

      // Optional: Specify domains where the navigation should occur through window.location instead on history.push. Useful when our Algolia config crawls multiple documentation sites and we want to navigate with window.location.href to them.
      externalUrlRegex: 'external\\.com|domain\\.com',

      // Optional: Replace parts of the item URLs from Algolia. Useful when using the same search index for multiple deployments using a different baseUrl. You can use regexp or string in the `from` param. For example: localhost:3000 vs myCompany.com/docs
      replaceSearchResultPathname: {
        from: '/docs/', // or as RegExp: /\/docs\//
        to: '/',
      },

      // Optional: Algolia search parameters
      searchParameters: {},

      // Optional: path for search page that enabled by default (`false` to disable it)
      searchPagePath: 'search',

      // Optional: whether the insights feature is enabled or not on Docsearch (`false` by default)
      insights: false,

      //... other Algolia params
    },
    // highlight-end
  },
};
```

:::info

The `searchParameters` option used to be named `algoliaOptions` in Docusaurus v1.

Refer to its [official DocSearch documentation](https://docsearch.algolia.com/docs/api#searchparameters) for possible values.

:::

:::warning

The search feature will not work reliably until Algolia crawls your site.

If search doesn't work after any significant change, please use the Algolia dashboard to **trigger a new crawl**.

:::

### Contextual search {#contextual-search}

上下文搜尋功能**預設為啟用狀態**。

它能確保搜尋結果**與當前語言和版本高度相關**。

```js title="docusaurus.config.js"
export default {
  // ...
  themeConfig: {
    // ...
    // highlight-start
    algolia: {
      contextualSearch: true,
    },
    // highlight-end
  },
};
```

假設您有2個文件版本（**v1**和**v2**）及2種語言（`en`和`fr`）。

當瀏覽v2文件時，若出現v1版本的搜尋結果會顯得突兀。有時v1與v2文件內容高度相似，可能導致相同查詢出現重複結果（每個版本各出現一次）。

同理，在瀏覽法語站點時，若返回英文文件結果也不符合預期。

為解決此問題，上下文搜尋功能會自動識別您當前瀏覽的文件版本與語言，並動態生成對應的搜尋過濾條件。

- 在`/en/docs/v1/myDoc`頁面時，搜尋結果僅包含**v1**版本的**英文**內容（及其他未版本化的頁面）
- 在`/fr/docs/v2/myDoc`頁面時，搜尋結果僅包含**v2**版本的**法文**內容（及其他未版本化的頁面）

:::info

當啟用`contextualSearch: true`（預設值）時，上下文篩選條件會與`algolia.searchParameters.facetFilters`提供的篩選器自動合併。

若有特殊需求，可禁用`contextualSearch`並自定義`facetFilters`：

```js title="docusaurus.config.js"
export default {
  // ...
  themeConfig: {
    // ...
    // highlight-start
    algolia: {
      contextualSearch: false,
      searchParameters: {
        facetFilters: ['language:en', ['filter1', 'filter2'], 'filter3'],
      },
    },
    // highlight-end
  },
};
```

詳見[Algolia分面搜尋文件](https://www.algolia.com/doc/guides/managing-results/refine-results/faceting/)。

:::

### 自訂Algolia搜尋樣式 {#styling-your-algolia-search}

DocSearch預設採用符合無障礙標準的精心調校主題，確保色彩與對比度符合規範。

您仍可透過修改`/src/css/custom.css`檔案，使用Docusaurus的[Infima CSS變數](styling-layout.mdx#styling-your-site-with-infima)來調整DocSearch樣式。

```css title="/src/css/custom.css"
[data-theme='light'] .DocSearch {
  /* --docsearch-primary-color: var(--ifm-color-primary); */
  /* --docsearch-text-color: var(--ifm-font-color-base); */
  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
  --docsearch-container-background: rgba(94, 100, 112, 0.7);
  /* Modal */
  --docsearch-modal-background: var(--ifm-color-secondary-lighter);
  /* Search box */
  --docsearch-searchbox-background: var(--ifm-color-secondary);
  --docsearch-searchbox-focus-background: var(--ifm-color-white);
  /* Hit */
  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-active-color: var(--ifm-color-white);
  --docsearch-hit-background: var(--ifm-color-white);
  /* Footer */
  --docsearch-footer-background: var(--ifm-color-white);
}

[data-theme='dark'] .DocSearch {
  --docsearch-text-color: var(--ifm-font-color-base);
  --docsearch-muted-color: var(--ifm-color-secondary-darkest);
  --docsearch-container-background: rgba(47, 55, 69, 0.7);
  /* Modal */
  --docsearch-modal-background: var(--ifm-background-color);
  /* Search box */
  --docsearch-searchbox-background: var(--ifm-background-color);
  --docsearch-searchbox-focus-background: var(--ifm-color-black);
  /* Hit */
  --docsearch-hit-color: var(--ifm-font-color-base);
  --docsearch-hit-active-color: var(--ifm-color-white);
  --docsearch-hit-background: var(--ifm-color-emphasis-100);
  /* Footer */
  --docsearch-footer-background: var(--ifm-background-surface-color);
  --docsearch-key-gradient: linear-gradient(
    -26.5deg,
    var(--ifm-color-emphasis-200) 0%,
    var(--ifm-color-emphasis-100) 100%
  );
}
```

### 自訂Algolia搜尋行為 {#customizing-the-algolia-search-behavior}

Algolia DocSearch支援透過`docusaurus.config.js`檔案中的`algolia`欄位傳遞[多種參數](https://docsearch.algolia.com/docs/api/)。

```js title="docusaurus.config.js"
export default {
  themeConfig: {
    // ...
    algolia: {
      apiKey: 'YOUR_API_KEY',
      indexName: 'YOUR_INDEX_NAME',
      // Options...
    },
  },
};
```

### 修改Algolia搜尋元件 {#editing-the-algolia-search-component}

若需直接編輯Algolia搜尋React元件，可對`@docusaurus/theme-search-algolia`中的`SearchBar`元件進行[swizzle](swizzling.mdx)操作：

```bash npm2yarn
npm run swizzle @docusaurus/theme-search-algolia SearchBar
```

### 技術支援 {#algolia-support}

Algolia DocSearch團隊可協助診斷站點搜尋問題。

可透過[電子郵件](mailto:documentationsearch@algolia.com)或[Discord](https://discord.gg/tXdr5mP)聯繫他們。

Docusaurus在[Discord](https://discordapp.com/invite/docusaurus)上也設有`#algolia`專屬頻道。

## 👥 使用Typesense DocSearch {#using-typesense-docsearch}

[Typesense](https://typesense.org) DocSearch運作原理與Algolia DocSearch相似，差異在於網站內容會被索引至Typesense搜尋叢集。

Typesense 是一個[開源](https://github.com/typesense/typesense)的即時搜尋引擎，您可以選擇：

- 在自有伺服器上[自行託管](https://typesense.org/docs/latest/guide/install-typesense.html#option-2-local-machine-self-hosting)，或
- 使用託管服務 [Typesense Cloud](https://cloud.typesense.org)。

與 Algolia DocSearch 類似，包含兩個元件：

- [typesense-docsearch-scraper](https://github.com/typesense/typesense-docsearch-scraper) - 負責爬取您的網站並將資料索引至 Typesense 叢集。
- [docusaurus-theme-search-typesense](https://github.com/typesense/docusaurus-theme-search-typesense) - 可整合至網站的搜尋列 UI 元件。

請參閱逐步教學：[如何執行 typesense-docsearch-scraper](https://typesense.org/docs/latest/guide/docsearch.html#step-1-set-up-docsearch-scraper) 以及[如何在 Docusaurus 網站安裝搜尋列](https://typesense.org/docs/latest/guide/docsearch.html#option-a-docusaurus-powered-sites)。

## 👥 使用本地搜尋 {#using-local-search}

若搜尋索引規模較小且可於使用者瀏覽網站時下載至其瀏覽器，您可使用本地搜尋外掛。

社群支援的[本地搜尋外掛清單請見此處](https://docusaurus.io/community/resources#search)。

## 👥 使用自訂搜尋 {#using-your-own-search}

若要使用自訂搜尋，請替換 `@docusaurus/theme-classic` 中的 `SearchBar` 元件

```bash npm2yarn
npm run swizzle @docusaurus/theme-classic SearchBar
```

這將在專案目錄中建立 `src/themes/SearchBar` 檔案。重新啟動開發伺服器並編輯元件後，您會發現 Docusaurus 現在使用您的自訂 `SearchBar` 元件。

**注意**：您也可以[從 Algolia SearchBar 進行替換](#editing-the-algolia-search-component)，並從該處建立自己的搜尋元件。